--- a/directory-links/Category.yaml
+++ b/directory-links/Category.yaml
@@ -9,7 +9,7 @@ info:
   summary: Попытка переосмысления задачи управления номенклатурой через использование ISD
 type: object
 allOf:
-  - $ref: "Aggregate.yaml"
+  - $ref: "first-dir/Aggregate.yaml"
   - $ref: "#props"
 $defs:
   props:
@@ -31,7 +31,7 @@ $defs:
         title: Относительная позиция в папке родительской категории
         type: number
       keyProps:
-        $ref: "goodsChars.yaml" # На уровне категории могут указываться любые характеристики
+        $ref: "third-dir/goodsChars.yaml" # На уровне категории могут указываться любые характеристики
                                 # товаров. Они становятся обязательными для заполнения на уровне товара,
                                 # при попытке включения в данную категорию
       iuIncludeRest: keyProps
