--- a/directory-links/SKUItem.yaml
+++ b/directory-links/SKUItem.yaml
@@ -10,7 +10,7 @@ info:
 type: object
 iuType: aggregate
 allOf:
-  - $ref: "Aggregate.yaml"
+  - $ref: "first-dir/Aggregate.yaml"
   - $ref: "#props"
 $defs:
   props:
@@ -29,7 +29,7 @@ $defs:
       baseUOM:
         title: Базовая единица измерения
         description: Единица измерения в которой ведётся учёт товара
-        $ref: "UnitOfMeasure.yaml"
+        $ref: "second-dir/UnitOfMeasure.yaml"
       taxGroup:
         title: Группа налогообложения
-        $ref: "taxGroups.yaml"
+        $ref: "second-dir/taxGroups.yaml"
